# localmail-redux

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: publish.yml
localmail/: __init__.py  inbox.py
tests/: base.py  helpers.py  test_localmail.py  test_prepopulated_mbox_file.py
tests/spam/: english-html.txt  english-multi.txt  english-plain.txt  polish-plain.txt  russian-html.txt
