[tool.poetry]
name = "localmail-redux"
version = "0.2.0"
description = ""
authors = ["Robert Hales <rob.hales@xelix.com>", "Simon Davy <simon.davy@canonical.com>"]
license = "GNU"
packages = [
    { include = "localmail" },
]

[tool.poetry.dependencies]
python = ">=3.6.7"
"zope.interface" = "^5.4.0"
Twisted = "^22.4.0"
Jinja2 = ">=2"
crochet = "^2.0.0"

[tool.poetry.dev-dependencies]
tox = "^3.25.1"
flake8 = "^5.0.1"
black = "^22.6.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
